[gd_scene load_steps=4 format=3 uid="uid://cg4b0ujwg563n"]

[ext_resource type="Script" uid="uid://bdh1b6ilgg61e" path="res://components/AutoCreateCuesDialog/AutoCreateCuesDialog.gd" id="1_gvfjq"]
[ext_resource type="Script" uid="uid://cgjbvxk3xxos1" path="res://components/VDInput/VDInput.gd" id="2_bgysa"]
[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://assets/Main.theme" id="2_s1x4y"]

[node name="AutoCreateCuesDialog" type="Window" node_paths=PackedStringArray("_text_edit", "_tree", "_cancel_button", "_create_button", "_load_timer", "_address_input", "_pid_from_input", "_pid_to_input")]
initial_position = 5
size = Vector2i(1040, 500)
script = ExtResource("1_gvfjq")
_text_edit = NodePath("PanelContainer/VBoxContainer/HSplitContainer/TextEdit")
_tree = NodePath("PanelContainer/VBoxContainer/HSplitContainer/Tree")
_cancel_button = NodePath("PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/HBoxContainer/CancelButton")
_create_button = NodePath("PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/HBoxContainer/CreateButton")
_load_timer = NodePath("LoadTimer")
_address_input = NodePath("PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer/LineEdit")
_pid_from_input = NodePath("PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer/PIDRangeFrom")
_pid_to_input = NodePath("PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer/PIDRangeTo")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_s1x4y")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = -50

[node name="TextEdit" type="TextEdit" parent="PanelContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tree" type="Tree" parent="PanelContainer/VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
column_titles_visible = true
hide_root = true

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Address: "

[node name="LineEdit" type="LineEdit" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "0.0.0.0"
script = ExtResource("2_bgysa")

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "PID Range From:"

[node name="PIDRangeFrom" type="SpinBox" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
max_value = 65535.0

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
text = "To:"

[node name="PIDRangeTo" type="SpinBox" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer"]
layout_mode = 2
max_value = 65535.0

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="CreateButton" type="Button" parent="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Create"

[node name="LoadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="PanelContainer/VBoxContainer/HSplitContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer/PIDRangeFrom" to="." method="_on_pid_range_from_value_changed"]
[connection signal="value_changed" from="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer2/HBoxContainer/PIDRangeTo" to="." method="_on_pid_range_to_value_changed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/PanelContainer/HBoxContainer/PanelContainer3/HBoxContainer/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="timeout" from="LoadTimer" to="." method="_on_load_timer_timeout"]
